# Divi

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  Dockerfile  FORK_COMMIT.md  INSTALL.md  Makefile.am  README.md  configure.ac  docker.config.json  docker.keydetails  libdiviconsensus.pc  libdiviconsensus.pc.in  pivx_cli-commands.txt  sh.exe.stackdump
divi/src/: AcceptBlockValidator.cpp  AcceptBlockValidator.h  AcceptedConnection.h  Account.cpp  Account.h  ActiveChainManager.cpp  ActiveChainManager.h  AddrDB.cpp  AddrDB.h  AddressBookManager.cpp  AddressBookManager.h  AvailableCoinsType.h  AvailableUtxoCalculator.cpp  AvailableUtxoCalculator.h  AvailableUtxoCollector.cpp  AvailableUtxoCollector.h  BIP9ActivationFeatureContainer.cpp  BIP9ActivationFeatureContainer.h  BIP9ActivationManager.cpp  BIP9ActivationManager.h  BIP9Deployment.cpp  BIP9Deployment.h  BlockCheckingHelpers.cpp  BlockCheckingHelpers.h  BlockConnectionService.cpp  BlockConnectionService.h  BlockDiskAccessor.cpp  BlockDiskAccessor.h  BlockDiskDataReader.cpp  BlockDiskDataReader.h  BlockDiskPosition.h  BlockFactory.cpp  BlockFactory.h  BlockFileHelpers.cpp  BlockFileHelpers.h  BlockFileInfo.cpp  BlockFileInfo.h  BlockFileOpener.cpp  BlockFileOpener.h  BlockIncentivesPopulator.cpp  (+543 more)
divi/src/GMock/: CMakeCache.txt
divi/src/GMock/googlemock/make/: gmock_test
divi/src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
divi/src/config/: divi-config.h.in  divx-config.h.in
divi/src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
divi/src/crypto/: aes.cpp
divi/src/libzerocoin/: Accumulator.h  AccumulatorProofOfKnowledge.h  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commitment.cpp  Commitment.h  Denominations.cpp  ParamGeneration.cpp  ParamGeneration.h  Params.cpp  Params.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  ZerocoinDefines.h  bignum.h  paramgen.cpp
divi/src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h  zerocoin.cpp  zerocoin.h
divi/src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bip38tooldialog.cpp  bitcoin.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  divi.cpp  divi.qrc  divi_locale.qrc  divistrings.cpp  divx.cpp  divx.qrc  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  masternodelist.cpp  moc_privacydialog.cpp  multisigdialog.cpp  multisigdialog.h  notificator.cpp  notificator.h  obfuscationconfig.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  (+33 more)
divi/src/qt/forms/: aboutdialog.ui  addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui  ui_privacydialog.h  ui_zdivcontroldialog.h  zdivcontroldialog.ui
divi/src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  (+79 more)
divi/src/qt/res/: bitcoin-qt.rc  divi-qt-res.rc  pivx-qt-res.rc
divi/src/qt/res/css/: default.css
divi/src/qt/res/icons/: bitcoin.icns  xgtc.icns
divi/src/qt/test/: test_main.cpp  uritests.cpp
divi/src/qt/test/.deps/: test_divi_qt-moc_paymentservertests.Po  (+4 more)
divi/src/script/: InterpreterStack.cpp  InterpreterStack.h  SignatureCheckers.cpp  SignatureCheckers.h  StackManager.cpp  StackManager.h  StakingVaultScript.cpp  StakingVaultScript.h  bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  opcodes.cpp  opcodes.h  script.cpp  script.h  script_error.cpp  script_error.h  scriptandsigflags.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
divi/src/test/: ActiveMasternode_tests.cpp  BIP9ActivationManager_tests.cpp  BareTxid_tests.cpp  BlockSignature_tests.cpp  CachedBIP9ActivationStateTracker_tests.cpp  Checkpoints_tests.cpp  CoinMinting_tests.cpp  DoS_tests.cpp  FakeBlockIndexChain.cpp  FakeBlockIndexChain.h  FakeMerkleTxConfirmationNumberCalculator.cpp  FakeMerkleTxConfirmationNumberCalculator.h  FakeWallet.cpp  FakeWallet.h  FilteredBoostFileSystem_tests.cpp  FilteredTransactionsCalculator_tests.cpp  ForkActivation_tests.cpp  InterpreterStack_tests.cpp  InventoryTypes_tests.cpp  IsMine_tests.cpp  LegacyPoSStakeModifierService_tests.cpp  LotteryWinnersCalculatorTests.cpp  MinimumFeeCoinSelectionAlgorithm_tests.cpp  MockBIP9ActivationStateTracker.h  MockBIP9ActivationTrackerFactory.h  MockBlockIncentivesPopulator.h  MockBlockSubsidyProvider.h  MockCoinMinter.h  MockDatabaseWrapper.h  MockFileSystem.cpp  MockFileSystem.h  MockMerkleTxConfirmationNumberCalculator.h  MockPoSStakeModifierService.h  MockSignatureSizeEstimator.h  MockSpentOutputTracker.h  MockSuperblockHeightValidator.h  MockTransactionRecord.h  MockUtxoBalanceCalculator.h  MockUtxoOwnershipDetector.h  MockVaultManagerDatabase.h  (+70 more)
divi/src/test/data/: bitcoin-deferred-util-test.json  bitcoin-util-test.json
divi/src/zmq/: ZMQNotifierFactory.cpp  ZMQNotifierFactory.h  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+16294 files in other folders)
